fixed tall maps getting cut off on mobile

--- a/static/map.css
+++ b/static/map.css
@@ -186,4 +186,8 @@ main > * {
     .zoom-buttons {
         top: 138px
     }
+
+    #map {
+        padding-top: 188px
+    }
 }
